--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ An existing gap in research surrounding the application of social norms reveals 
 
 
 
-### Opportunity:
+### Opportunity
 
 The aim of this research is to advance Cialdini et al’s work of testing descriptive vs
 injunctive norms which does not distinguish between independent and interdependent behavior
