--- a/index.Rmd
+++ b/index.Rmd
@@ -7,9 +7,13 @@ An existing gap in research surrounding the application of social norms reveals 
 
 ### Motivation
 
+
 ![](Motivation_10.png)
 
 
+&nbsp;
+&nbsp;
+&nbsp;
 
 ### Opportunity
 
