--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -2,7 +2,7 @@
 title: "Extended Analysis"
 ---
 
-Based on what we learned from the 3-way ANOVA excerises, research colleagues ran measures of dishonesty rate (previously measured honesty in the ANOVAs) against each of the five conditions for our experiment based on the message they received before the dice roll game: the control group, empirical positive, empirical negative, normative positive, and normative negative. The additional benefit of this structure provided us flexibility such that we could analyze effects between conditions at the individual level or time-series level. Across treatments and populations, 32.9% of decisions were reported dishonestly in our experiment.
+Based on what we learned from the 3-way ANOVA excerises, colleagues ran additional statistics, strictly to gain more specificity of performance on each treatment group. First, they measured the dishonesty rate (previously measured honesty in the ANOVAs) against each of the five conditions for our experiment based on the message they received before the dice roll game: the control group, empirical positive, empirical negative, normative positive, and normative negative. The additional benefit of this structure provided us flexibility such that we could analyze effects between conditions at the individual level or time-series level. Across treatments and populations, 32.9% of decisions were reported dishonestly in our experiment.
 
 The conditions were fairly balanced on size and gender split but differed slightly on average dishonesty and the variability of dishonesty, however group sizes were small. The control group (M = 36.5%, SD = 45.1%) had 33 participants, 55% of whom were female. The empirical positive (EP) condition (M = 39.6%, SD = 40.1%) had 39 participants, 54% of whom were female. 33 participants, 67% female comprised the empirical negative (EN) condition (M = 25.8%, SD = 45.5%). There were 38 normative positive (NP) participants (M = 38.0%, SD = 44.6%), of whom 55% were female. Lastly, the normative negative (NN) condition of 38 participants, 47% female, had the lowest variability and level of dishonesty (M = 21.1%, SD = 34.6%). 
 
@@ -12,7 +12,7 @@ Within each condition there were participants who never lied, lied some of the t
 
 ####Normative versus empirical messages, H1.
 
-In order to test H1, which was that normative messages would result in less dishonest behavior than empirical messages, we ran a Wilcoxon rank-sum test between the two independent groups’ lying behavior at the individual level. Similar to the ANOVA, this test found no significant difference in dishonesty between participants who received an empirical or normative message, W = 2531, p = 0.39, thus we could not reject the null. 
+In order to test H1, which was that normative messages would result in less dishonest behavior than empirical messages, we ran a Wilcoxon rank-sum test between the two independent groups’ lying behavior at the individual level. Similar to the ANOVA, this test found no significant difference in dishonesty between participants who received an empirical or normative message, W = 2531, p = 0.39, thus we still could not reject the null. 
 
 When we ran the same test on type of frame used in a message however, the result of participants cheating less in the negatively-framed treatments is much closer to the generally accepted significance threshold, W = 3180.5, p = 0.06. 
 
@@ -38,11 +38,11 @@ Consistent with earlier analyses suggesting the power of a negative frame and me
 
 In order to capture the number of decisions each participant made, we transformed the dataset in order to run a panel data regression. This test uses participant ID numbers and round numbers to avoid collapsing multiple decisions into an individual average. The issues with relying on the individual average include losing power unnecessarily, because the average could reflect two or ten decisions, and not controlling for the fact that each individual’s decisions are influenced by those that came before it. We ran a series of four regressions on the panel data in order to explore the impacts of the variables on the percentage of dishonest behavior.
 
-  - Influence of condition on the dependent variable and found both empirical negative and normative negative messages relating to significantly lower rates of lying behavior (inclusive of clustering the standard errors at the individual level), p = 0.22.
+  - Influence of condition on the dependent variable and found both empirical negative and normative negative messages relating to much lower rates of lying behavior (inclusive of clustering the standard errors at the individual level), p = 0.22.
   
   - Gender interaction with the condition variable, with males being significantly more likely to lie at p < 0.001, and an effect of empirical messages decreasing lying behavior among men, p = 0.01, such that the expected increase (~20%) based on gender alone is almost completely negated.
   
-  - Interaction of risk and condition reported a strange effect in relation to the normative positive condition. The beta for this condition is extremely negative, after being positive in the original regression, whereas the interaction term was significantly positive at p = 0.02.
+  - Interaction of risk and condition reported a strange effect in relation to the normative positive condition. The beta for this condition is extremely negative, after being positive in the original regression, whereas the interaction term was reporting positive at p = 0.02.
 
   ![](PanelRegression.png)
   
